<resources>
    <string name="app_name">Guessing Game</string>
    <string name="splash_activity_app_name_text">Number Guessing Game</string>
    <string name="main_activity_info_text"> please select a number of digits.
    the number of digits that I keep in mind and the number of digits you choose will be the same.
    also never forget that you have 10 rights.</string>
    <string name="main_activity_2_digit_radio_btn">2 Digits</string>
    <string name="main_activity_3_digit_radio_btn">3 Digits</string>
    <string name="main_activity_4_digit_radio_btn">4 Digits</string>
    <string name="main_activity_start_button_text">Start</string>
    <string name="main_activity_no_numbers_selected_message"> please select an option before proceeding to the next stage </string>
    <string name="quiz_activity_guess_edit_text_hint_text">Whats do you guess?</string>
    <string name="quiz_activity_empty_guess_text">"    "</string>
    <string name="quiz_activity_guess_button">Guess</string>
    <string name="quiz_activity_correct_answer">Correct!</string>
    <string name="quiz_activity_smaller_answer">Your Guess is smaller than the answer</string>
    <string name="quiz_activity_larger_answer">Your Guess is larger than the answer</string>
    <string name="results_activity_restart_button_text">Restart</string>
    <string name="result_win">You won!</string>
    <string name="result_lose">You Lost the correct answer was: </string>
    <string name="remaining_rights_string">\"Remaning rights: \"</string>
</resources>