<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/quiz_activity_remaining_rights_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <TextView
        android:id="@+id/quiz_activity_hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_activity_remaining_rights_text" />

    <EditText
        android:id="@+id/quiz_activity_guess_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/quiz_activity_guess_edit_text_hint_text"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_activity_hint_text" />

    <Button
        android:id="@+id/quiz_activity_guess_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/quiz_activity_guess_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quiz_activity_guess_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_mono_medium"
                android:padding="4dp"
                android:text="@string/quiz_activity_empty_guess_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quiz_activity_guess_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_mono_medium"
                android:padding="4dp"
                android:text="@string/quiz_activity_empty_guess_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quiz_activity_guess_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_mono_medium"
                android:padding="4dp"
                android:text="@string/quiz_activity_empty_guess_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quiz_activity_guess_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_mono_medium"
                android:padding="4dp"
                android:text="@string/quiz_activity_empty_guess_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quiz_activity_guess_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_mono_medium"
                android:padding="4dp"
                android:text="@string/quiz_activity_empty_guess_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quiz_activity_guess_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_mono_medium"
                android:padding="4dp"
                android:text="@string/quiz_activity_empty_guess_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quiz_activity_guess_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_mono_medium"
                android:padding="4dp"
                android:text="@string/quiz_activity_empty_guess_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quiz_activity_guess_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_mono_medium"
                android:padding="4dp"
                android:text="@string/quiz_activity_empty_guess_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quiz_activity_guess_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_mono_medium"
                android:padding="4dp"
                android:text="@string/quiz_activity_empty_guess_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quiz_activity_guess_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_mono_medium"
                android:padding="4dp"
                android:text="@string/quiz_activity_empty_guess_text"
                android:textSize="16sp" />
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>